# netbackup

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: devices.demo.yml  devices.example.yml
docs/: suggestions.txt  wiki.md
scripts/: check_cron.sh  cron.example  crontab.5min  crontab.testing.txt  run_backup.sh  run_web.sh
src/netbackup/: __init__.py  adapters.py  auth.py  backup.py  inventory.py  jobs.py  logging_setup.py  paths.py  retention.py  settings.py  storage.py  timefmt.py  web.py  web_security.py
systemd/: netbackup-backup-testing.timer  netbackup-backup.service  netbackup-backup.timer  netbackup-web.service
tests/: test_backup_integration.py  test_inventory.py  test_panos_adapters.py  test_paths.py  test_retention.py  test_settings.py  test_ssh_adapter.py  test_timefmt.py  test_web.py  test_web_security.py
