[project]
name = "netbackup"
version = "0.1.0"
description = "Internal network device configuration backup service"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
