[project]
name = "netbackup"
version = "0.2.0"
description = "Internal network device configuration backup service"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "netmiko==4.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
